--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ REACT_APP_RECIPIENT_EMAIL=luminawebs@gmail.com
 # Optional: Backend API endpoint if you prefer server-side processing
 # REACT_APP_API_ENDPOINT=https://your-api.com/api/submit-form
 
+# Microsoft Clarity Configuration
+# IMPORTANT: Replace with your actual Clarity Project ID from https://clarity.microsoft.com/
+REACT_APP_CLARITY_PROJECT_ID=sjfnmwftvk
+
