--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ REACT_APP_RECIPIENT_EMAIL=luminawebs@gmail.com
 
 # Optional: Backend API endpoint if you prefer server-side processing
 # REACT_APP_API_ENDPOINT=https://your-api.com/api/submit-form
+
+# Microsoft Clarity Configuration
+# Get your project ID from https://clarity.microsoft.com/
+REACT_APP_CLARITY_PROJECT_ID=your_clarity_project_id_here
+
+# Google Analytics Configuration (already configured in your analytics.js file)
+# REACT_APP_GA_MEASUREMENT_ID=G-079MYKHJVK
